server/app/assets/main.less
// Bootstrap parts
// Core variables and mixins;
@import "lib/bootstrap/less/variables.less";
@icon-font-path: "lib/bootstrap/fonts/";
@import "lib/bootstrap/less/mixins.less";

// Reset and dependencies
@import "lib/bootstrap/less/normalize.less";
@import "lib/bootstrap/less/print.less";
@import "lib/bootstrap/less/glyphicons.less";

// Core CSS
@import "lib/bootstrap/less/scaffolding.less";
@import "lib/bootstrap/less/type.less";
@import "lib/bootstrap/less/code.less";
@import "lib/bootstrap/less/grid.less";
@import "lib/bootstrap/less/tables.less";
@import "lib/bootstrap/less/forms.less";
@import "lib/bootstrap/less/buttons.less";

// Components
@import "lib/bootstrap/less/component-animations.less";
@import "lib/bootstrap/less/dropdowns.less";
@import "lib/bootstrap/less/button-groups.less";
//@import "lib/bootstrap/less/input-groups.less";
//@import "lib/bootstrap/less/navs.less";
//@import "lib/bootstrap/less/navbar.less";
//@import "lib/bootstrap/less/breadcrumbs.less";
//@import "lib/bootstrap/less/pagination.less";
//@import "lib/bootstrap/less/pager.less";
@import "lib/bootstrap/less/labels.less";
//@import "lib/bootstrap/less/badges.less";
//@import "lib/bootstrap/less/jumbotron.less";
//@import "lib/bootstrap/less/thumbnails.less";
@import "lib/bootstrap/less/alerts.less";
@import "lib/bootstrap/less/progress-bars.less";
//@import "lib/bootstrap/less/media.less";
//@import "lib/bootstrap/less/list-group.less";
//@import "lib/bootstrap/less/panels.less";
//@import "lib/bootstrap/less/responsive-embed.less";
//@import "lib/bootstrap/less/wells.less";
@import "lib/bootstrap/less/close.less";

// Components w/ JavaScript
@import "lib/bootstrap/less/modals.less";
@import "lib/bootstrap/less/tooltip.less";
//@import "lib/bootstrap/less/popovers.less";
//@import "lib/bootstrap/less/carousel.less";

// Utility classes
@import "lib/bootstrap/less/utilities.less";
@import "lib/bootstrap/less/responsive-utilities.less";

@import "lib/bootstrap/less/theme.less";

@import (inline) "lib/jqplot/jquery.jqplot.min.css";

.participants-table {
    border-collapse: separate;
    td, th {
        border-left-width: 0;
    }

    thead {
        position: sticky;
        top: 0;
        z-index: 101;
        tr+tr th {  // last row
            border-bottom: 5px solid lightgray;
        }
    }
    th.participant-header {
        border-right-width: 0;
    }
    .participant-header {
        z-index: 100;
        position: sticky;
        left: 0;
    }
}

table{
    border-bottom: 5px solid lightgray;
    border-top: 5px solid lightgray;
    font-size: smaller;
}

table thead{
    background-color: white;
}
/*table td, table th{
    padding-left: 5px;
    padding-right: 5px;
    border: 1px solid black;
}*/
.table-condensed > thead > tr > th{
    padding: 2px;
}
td, th{
    border-left: 1px dashed lightgray;
    border-right: 1px dashed lightgray;
}
th.col-start, th.col-end, th.col-time{
    overflow: hidden;
    text-overflow: ellipsis;
}
th[colspan="2"].col-end{
    text-align: center;
}
th.col-end{
    text-align: right;
}

td.col-start, td.col-end, td.col-time{
    text-align: right;
    padding-left: 3px !important;
    padding-right: 3px !important;
}
.col-start{
    border-left-style: solid;
    /*border-left-width: ;*/
}
td.col-end{
    border-right-style: solid;
}

.participant-header{
    background-color: white;
    background-clip: padding-box;
    padding-right: 0;
    tr:hover td&{
        background-color: #f5f5f5;
    }
    &.scrolled-horizontally{
        box-shadow: 3px 0 1.5px -1px rgb(0,0,0);
    }
    label{
        font-weight: normal !important;
        &:hover{
            input[type="checkbox"]{
                box-shadow: 0 0 14px 5px rgba(0, 0, 0, 0.75);
            }
        }
    }
}
.participant-checkbox{
    float: left;
}

.label-result{
    float: right;
}

.participant-header-label {
    display: block;
    text-align: center;
}

.track-length{
    font-size: smaller;
}

body{
    margin-bottom: 80px;
}

.modal-xxl{
    width: 100% !important;
    /*margin: auto !important;*/
}
#button-bar{
    position: fixed;
    bottom: 0;
    left: 0;
    right: 0;
    background-color: lightyellow;
    height: 50px;
    padding: 5px;
    z-index: 200;
}

.selected-participants{
    padding-left: 5px;
}

.legend {
    border: 2px solid black;
    padding: 10px;
    margin-bottom: 30px;
    @media screen and (min-width: 900px){
        float: right;
    }
}

.timeline {
    margin-bottom: 20px;

    // We recommend even numbers. Otherwise, the centering looks quite odd.
    @thin-line: 2px;
    @thick-line: 6px;

    .just-line(@color, @thickness, @style) {
        .timeline-time {
            border-right: @thickness @style @color;
            // padding should be adjusted according to the border
            padding-right: 10px - @thickness / 2;
        }
        .timeline-duration {
            padding-left: 7px - @thickness / 2;
        }
    }
    .with-bullet(@color, @lineColor, @thickness, @style, @top: 0px) {
        .just-line(@lineColor, @thickness, @style);
        .timeline-time {
            @radius: 7px;
            &:after {
                content: "";
                display: block;
                position: absolute;
                top: @top;
                right: -@radius - @thickness/2;
                width: 2*@radius;
                height: 2*@radius;
                background-color: @color;
                border-radius: @radius;
            }
        }
    }
    .timeline-time {
        position: relative;
    }
    &, td {
        border-width: 0;
    }

    .timeline-point {
        &.arrival {
            .with-bullet(blue, gray, @thin-line, solid);
        }
        &.departure {
            .with-bullet(blue, blue, @thick-line, solid);
        }
        .timeline-time {
            text-align: right;
            padding-left: 10px;
            padding-right: 10px;
        }
    }
    .timeline-process:hover, .timeline-process:hover+tr, .before-hover {
        background-color: yellow;
    }
    .timeline-process {
        .just-line(blue, @thick-line, solid);
    }
    .timeline-process.pause {
        .just-line(gray, @thin-line, solid);
    }
    .timeline-end.gave-up {
        .with-bullet(red, red, 0, solid);
    }
    .timeline-point.finish {
        .with-bullet(green, green, 0, solid);
    }
    .timeline-content {
        padding-left: 10px;
    }
    &.timeline-legend {
        .relative-time {
            display: none;
        }
    }

    .without-overtaking & .people-list-expand {
        display: none;
    }

    .people-list-expand {
        min-width: 43px;
    }

    .checkpoint {
        @size: 25px;
        background-color: black;
        color: white;
        min-width: @size;
        min-height: @size;
        border-radius: @size/2;
        display: inline-block;
        text-align: center;
        vertical-align: middle;
        padding-top: 4px;
        .dot {
            display: none;
        }
    }

    .finish .checkpoint {
        border-radius: 0;
        @size: 3px;
    }
    .start .checkpoint {
        border-radius: 0;
        border: 18px solid transparent;
        border-top-color: black;
        background-color: transparent;
        border-bottom-width: 0;
        margin-top: 5px;
        min-height: auto;
    }

    .people-list-dropdown {
        display: inline-block;
    }

}

.timeline-switches {
    margin-bottom: 20px;
}


body.with-details {
    .without-details-only {
        display: none;
    }
}
body.without-details {
    .participants-table {
        width: auto;
        margin-left: auto;
        margin-right: auto;
    }
    .detailed-only {
        display: none;
    }
}

.with-relative-time & .clock-time,
.with-clock-time & .relative-time,
.with-pace & .speed,
.with-speed & .pace,
{
    display: none;
}


@media screen {
    .age{
        display: block;
    }
    .col-time{
        position: relative !important;
        .more-dropdown {
            position: absolute;
            bottom: 3px;
            right: 3px;
            .dropdown-menu{
                width: 300px;
            }
        }
        .more-button-placeholder {
            visibility: hidden;
        }
    }

    .people-list-dropdown {
        .dropdown-menu{
            width: 300px;
        }
    }
}

@media print {
    #global-stats{
        display: none;
    }
    .category{
        white-space: nowrap;
    }
    .participant-header{
        white-space: nowrap;
        label{
            text-align: left;
        }
    }
    .first{
        // Background color does not work well, maybe due to collision with Bootstrap CSS:
        //background-color: yellow !important;
        //-webkit-print-color-adjust: exact !important;
        //color-adjust: exact !important;
        border: 3px solid red !important;
        .first-badge{
            display: none;
        }
    }
    .more-button, .more-button-placeholder{
        display: none;
    }
}

